PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016, PHP 7.1.0beta2

- Intl:
  . Fixed bug #72639 (Segfault when instantiating class that extends
    IntlCalendar and adds a property). (Laruence)

- OpenSSL:
  . Use strict mode when decoding base64 in openssl_decrypt(). (Lauri Kenttä)

- SPL:
  . Fixed bug #72646 (SplFileObject::getCsvControl does not return the escape
    character). (cmb)

- Standard:
  . Made base64_decode() padding checks in strict mode stricter. (Lauri Kenttä)
  . Made base64_decode() in non-strict mode binary safe. (Lauri Kenttä)

- Streams:
  . Use strict mode when decoding base64 in data URIs. (Lauri Kenttä)

- XMLRPC:
  . Fixed bug #72647 (xmlrpc_encode() unexpected output after referencing
    array elements). (Laruence)

21 Jul 2016, PHP 7.1.0beta1

- Core:
  . Fixed bug #72629 (Caught exception assignment to variables ignores
    references). (Laruence)
  . Fixed bug #72594 (Calling an earlier instance of an included anonymous
    class fatals). (Laruence)
  . Fixed bug #72581 (previous property undefined in Exception after
    deserialization). (Laruence)
  . Fixed bug #72543 (Different references behavior comparing to PHP 5)
    (Laruence, Dmitry, Nikita)
  . Fixed bug #72347 (VERIFY_RETURN type casts visible in finally). (Dmitry)
  . Fixed bug #72216 (Return by reference with finally is not memory safe).
    (Dmitry)
  . Fixed bug #72215 (Wrong return value if var modified in finally). (Dmitry)
  . Fixed bug #71818 (Memory leak when array altered in destructor). (Dmitry)
  . Fixed bug #71539 (Memory error on $arr[$a] =& $arr[$b] if RHS rehashes)
    (Dmitry, Nikita)
  . Added new constant PHP_FD_SETSIZE. (cmb)
  . Added optind parameter to getopt(). (as)
  . Added PHP to SAPI error severity mapping for logs. (Martin Vobruba)
  . Fixed bug #71911 (Unable to set --enable-debug on building extensions by